--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
 
         <section>
-            <article class="container article-lista">
+            <article id="formacao" class="container article-lista">
                 <div>
                     <h3 class="topico-principal">Formação</h3>
                 </div>
@@ -70,7 +70,7 @@
         </section>
 
         <section class="wrapper-portfolio">
-            <article class="container article-lista">
+            <article id="portifolio" class="container article-lista">
                 <div>
                     <h3 class="topico-principal">Blog</h3>
                 </div>
@@ -106,9 +106,9 @@
     <footer class="footer">
         <div class="container">
             <ul id="contato" class="lista-footer">
-                <li><i class="fas fa-envelope-square estilo-icon"></i>angelalopo@outlook.com</li>
-                <li><i class="fab fa-linkedin estilo-icon"></i>angelalopo</li>
-                <li><i class="fab fa-github-square estilo-icon"></i>Alopo2</li>
+                <li><i class="fas fa-envelope-square estilo-icon"></i><a href="mailto:angelalopo@outlook.com" target="_blank" class="links">angelalopo@outlook.com</a></li>
+                <li><i class="fab fa-linkedin estilo-icon"></i><a href="www.linkedin.com/in/angelalopo/" target="_blank" class="links">Angela de Carvalho</a></li>
+                <li><i class="fab fa-github-square estilo-icon"></i><a href="www.github.com/alopo2" target="_blank" class="links">Alopo2</a></li>
             </ul>
         </div>
     </footer>
