--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
                     <h2 class="profissao">Desenvolvedora Front-End</h2>
                 </div>
                 <div>
-                    <p>Colocar a sua descrição.</p>
+                    <p class="descricao-perfil"> Trabalhei durante seis anos de forma autônoma com manutenção de notebooks e desktops, bem como,
+                        instalação e configuração de softwares e sistemas operacionais (Windows e Linux),
+                        montagem de computadores, instalação de redes sem fio e com fio (par trançado), limpeza e
+                        prevenção de hardwares.
+                        Atualmente, tenho buscado conhecimentos na área de programação de forma mais aprofundada,
+                        fazendo diversos cursos e desenvolvendo alguns projetos de front-end. Tenho interesse nas
+                        linguagens
+                        de programação Python e JavaScript, mas não me limito quando o assunto é me aprimorar e
+                        conhecer novas tecnologias.
+                    </p>
                 </div>
             </article>
         </section>
@@ -56,13 +65,42 @@
                             <p class="lista-titulo">Ciclo Formativo - PretaLab</p>
                             <a href="https://www.pretalab.com/formacao" target="blank" class="lista-local">PretaLab /
                                 Olabi</a>
-                            <p class="lista-descricao">Descrição do Curso</p>
+                            <p class="lista-descricao">Ciclo composto por várias etapas formativas na área de
+                                programação, visando o desenvolvimento de hard skils e soft skils.
+                                Foram quatro meses imersivos, onde tivemos módulos de HTML e CSS, JavaScript, ReactJS,
+                                além de encontros com a psicóloga Mônica Santana,
+                                para aprendermos e desenvolvermos habilidades essenciais para a entrarmos no mercado de
+                                trabalho, mas também permanecermos.</p>
                         </li>
                         <li>
-                            <p class="lista-titulo">Ciclo Formativo - PretaLab</p>
-                            <a href="https://www.pretalab.com/formacao" target="blank" class="lista-local">PretaLab /
-                                Olabi</a>
-                            <p class="lista-descricao">Descrição do Curso</p>
+                            <p class="lista-titulo">Tech Academy - StartSe</p>
+                            <a href="https://www.startse.com/" target="blank" class="lista-local">StartSe</a>
+                            <p class="lista-descricao">Foram três meses de estudos e práticas em Lógica de Programação,
+                                HTML, CSS, Elementos
+                                de Página e GIT, JavaScript, HTML Semântico e FlexBox, Programação Orientada a Objetos
+                                (POO) e SQL. </p>
+                        </li>
+                        <li>
+                            <p class="lista-titulo">Fundamentos de Lógica de Programação</p>
+                            <a href="https://drive.google.com/file/d/1AmnA5MWgF1B1AJRgmgUmtZWxRcrsdhhC/view"
+                                target="blank" class="lista-local">Fundação Bradesco /
+                                Escola Virtual</a>
+                            <p class="lista-descricao"> capítulo um - lógica, algoritmo e pseudocódigo / capítulo dois -
+                                controle de fluxo e estrutura de repetição com duração de 15 (quinze) horas. </p>
+                        </li>
+                        <li>
+                            <p class="lista-titulo">Introdução à Programação e Pensamento Computacional</p>
+                            <a href="https://drive.google.com/file/d/1aubfP2mr_mZ5U8MEVp-ibHB1MgZBU7tQ/view"
+                                target="blank" class="lista-local">Digital Inovation One - DIO</a>
+                            <p class="lista-descricao"> Foram cinco módulos dividos em: pensamento computacional
+                                (pilares - decomposição, padrões, abstração e algoritmos); introdução à lógica de
+                                programação (o que é lógica e técnicas de lógica de programação); fundamentos de
+                                algoritmos (tipologia e variáveis, instruções primitivas, estruturas condicionais e
+                                operadores, estruturas de repetição, valores e matrizes, funções e instruções de entrada
+                                e saída); linguagens de programação (introdução à linguagens de programação, como um
+                                computador entender o programa?, características de um programa, análise de código e
+                                paradigmas de programação.); primeiro contato com a programação (algoritmos em
+                                portugol). </p>
                         </li>
                     </ul>
                 </div>
@@ -106,9 +144,12 @@
     <footer class="footer">
         <div class="container">
             <ul id="contato" class="lista-footer">
-                <li><i class="fas fa-envelope-square estilo-icon"></i><a href="mailto:angelalopo@outlook.com" target="_blank" class="links">angelalopo@outlook.com</a></li>
-                <li><i class="fab fa-linkedin estilo-icon"></i><a href="www.linkedin.com/in/angelalopo/" target="_blank" class="links">Angela de Carvalho</a></li>
-                <li><i class="fab fa-github-square estilo-icon"></i><a href="www.github.com/alopo2" target="_blank" class="links">Alopo2</a></li>
+                <li><i class="fas fa-envelope-square estilo-icon"></i><a href="mailto:angelalopo@outlook.com"
+                        target="_blank" class="links">angelalopo@outlook.com</a></li>
+                <li><i class="fab fa-linkedin estilo-icon"></i><a href="https://www.linkedin.com/in/angelalopo/"
+                        target="_blank" class="links">Angela de Carvalho</a></li>
+                <li><i class="fab fa-github-square estilo-icon"></i><a href="https://www.github.com/alopo2"
+                        target="_blank" class="links">Alopo2</a></li>
             </ul>
         </div>
     </footer>
